# DegorasEnvSetup

./: .gitignore  README.md
DegorasEnvSetup/: 0-Postbuild_Configuration.txt  0-TODO-Build examples + BD Conf.txt  0-Useful_Commands.txt  1-DEGORAS-PROJECT_DevDrive_Setup_v251026.ps1  1-Degoras_DevDrive_Setup.ps1  2-DEGORAS-PROJECT_MSYS2_Env_Setup_v251026.ps1  2-Degoras_MSYS2_Env_Setup.ps1  3-DEGORAS-PROJECT_VCPKG_Clone_Setup_v251026.ps1  3-Degoras_VCPKG_Clone_Setup.ps1  4-DEGORAS-PROJECT_VCPKG_Deps_Setup_v251026.ps1  4-Degoras_VCPKG_Deps_Setup.ps1  5-DEGORAS-PROJECT_VCPKG_Qt6_Setup_v251026.ps1  5-Degoras_VCPKG_Qt6_Setup.ps1  6-DEGORAS-PROJECT_VCPKG_Qt6Deps_Setup_v251026.ps1  6-Degoras_VCPKG_Qt6Deps_Setup.ps1
DegorasEnvSetup/CODE_EXAMPLES/HelloWorldMongoC/: App_HelloWorldMongoC.cpp  CMakeLists.txt
DegorasEnvSetup/CODE_EXAMPLES/HelloWorldQwt/: App_HelloWorldQwt.cpp  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
DegorasEnvSetup/CODE_EXAMPLES/hello_worlds/HelloWorldMongoC/: CMakeLists.txt  CMakePresets.json
DegorasEnvSetup/CODE_EXAMPLES/hello_worlds/HelloWorldMongoCxx/: App_HelloWorldMongoCxx.cpp  CMakeLists.txt
DegorasEnvSetup/CODE_EXAMPLES/hello_worlds/HelloWorldQtMV/: App_HelloWorldQtMV.cpp  model.cpp  model.h  view.cpp  view.h  view.ui
DegorasEnvSetup/CODE_EXAMPLES/hello_worlds/HelloWorldQwt/: App_HelloWorldQwt.cpp  CMakePresets.json  CMakeUserPresets.json.example
DegorasEnvSetup/SCRIPTS_ENV/: degoras-env-bootstrap.sh  degoras-env-launcher.bat
DegorasEnvSetup/VCPKG_TRIPLETS/: x64-mingw-dynamic-degoras.cmake
DegorasEnvSetup/code_examples/hello_worlds/HelloWorldC++/: App_HelloWorldC++.cpp  CMakeLists.txt  CMakePresets.json
DegorasEnvSetup/code_examples/hello_worlds/HelloWorldMongoC/: App_HelloWorldMongoC.cpp
DegorasEnvSetup/code_examples/hello_worlds/HelloWorldMongoCxx/: CMakePresets.json
DegorasEnvSetup/code_examples/hello_worlds/HelloWorldQtMV/: App_HelloWorldQtMV.cpp  CMakeLists.txt  CMakePresets.json
DegorasEnvSetup/code_examples/hello_worlds/HelloWorldQwt/: CMakeLists.txt
DegorasEnvSetup/code_examples/hello_worlds/HelloWorldSpdlog/: App_HelloWorldSpdlog.cpp  CMakeLists.txt  CMakePresets.json
DegorasEnvSetup/code_examples/hello_worlds/HelloWorldVcpkg/: App_HelloWorldVcpkg.cpp  CMakeLists.txt  CMakePresets.json
DegorasEnvSetup/packages_msys2/: mingw-w64-ucrt-x86_64-gcc-libs-15.2.0-8-any.pkg.tar.zst  mingw-w64-ucrt-x86_64-gdb-16.2-1-any.pkg.tar.zst  mingw-w64-ucrt-x86_64-graphviz-12.2.1-1-any.pkg.tar.zst
DegorasEnvSetup/packages_vcpkg/: vcpkg_installed_x64-mingw-dynamic-degoras.json
DegorasEnvSetup/scripts_env/: degoras-env-bootstrap.sh  degoras-env-launcher.bat
DegorasEnvSetup/vcpkg_overlays/libbson/: portfile.cmake  vcpkg.json
DegorasEnvSetup/vcpkg_overlays/mongo-c-driver/: fix-dependencies.patch  fix-dependencies.patch_  portfile.cmake  vcpkg.json
DegorasEnvSetup/vcpkg_overlays/mongo-c-driver/patches/: fix-dependencies.patch
DegorasEnvSetup/vcpkg_overlays/mongo-cxx-driver/: cmake-project-include.cmake  portfile.cmake  vcpkg.json
DegorasEnvSetup/vcpkg_overlays/utf8proc/: portfile.cmake  vcpkg.json
DegorasEnvSetup/vcpkg_triplets/: x64-mingw-dynamic-degoras.sha256
